tsk-20: Obtain refresh token (#24)
Closes #20

Reviewed-on: https://git.kundeng.us/phoenix/textsender-auth/pulls/24
Co-committed-by: phoenix <kundeng00@pm.me>
