# internal/handler/endpoint/endpoint.go
@@ -5,3 +5,4 @@ const Register = "/api/v1/register"
 const Login = "/api/v1/login"
 const CreateServiceUser = "/api/v1/service/register"
 const LoginServiceUser = "/api/v1/service/login"
+const TokenRefresh = "/api/v1/token/refresh"
